<resources>
    <string name="game_analysis">Game Analysis</string>
    <string name="log_out">Log out</string>
    <string name="players_scouting">Players Scouting</string>
    <string name="account_management">Account Management</string>
    <string name="medical_schedule">Medical Schedule</string>
    <string name="team_management">Team Management</string>
    <string name="training_schedule">Training Schedule</string>
    <string name="players_statistics">Players Statistics</string>
    <string name="manage_team_schedule">Manage Team Schedule</string>
    <string name="manage_players_information">Manage Players Information</string>
    <string name="set_team_standards">Set Team Standards</string>
    <string name="manage_team_members">Manage Team Members</string>
    <string name="import_export_team_data">Import/Export Team Data</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="match_statistics">Match Statistics</string>
    <string name="training_statistics">Training Statistics</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="team_membership">Team Membership</string>
    <string name="player_overview">Player Overview</string>
    <string name="player_game_analysis">Player Game Analysis</string>
    <string name="treatment_generator">Treatment Generator</string>
    <string name="manage_treatments">Manage Treatments</string>
    <string name="injury_report">Injury Report</string>
    <string name="training_schedule_generator">Training Schedule Generator</string>
    <string name="manage_exercises">Manage Exercises</string>
    <string name="set_position_standards">Set Position Standards</string>
    <string name="training_impact">Training Impact</string>
    <string name="Save">Save</string>
    <string name="Clear">Clear</string>
    <string name="Export_Player_Moments">Export Player Moments</string>
    <string name="save">Save</string>
    <string name="click_to_import_video">Click to import video</string>
    <string name="clear">Clear</string>
    <string name="importvideo">Import</string>
    <string name="export_player_s_moments">Export Player\'s Moments</string>
    <string name="export_plans">Export Plans</string>
    <string name="submit">Submit</string>
    <string name="player_s_name">Player\'s Name:</string>
    <string name="arrow">&#45;&#62;</string>
    <string name="save_from_min_sec">Save from( Min:Sec)</string>
    <string name="save_to_min_sec">Save to(Min:Sec)</string>
    <string name="mergedvideo">TODO</string>
    <string name="select_player_who_exists_in_saves">Select Player Who Exists in Saves</string>
    <string name="plan_name">Plan Name</string>
    <string name="name">Name</string>
    <string name="export_schedule">Export Schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_manage__exercise">Manage_Exercise</string>
    <string name="Add">Add</string>
    <string name="AddVideo">addVideo</string>
    <string name= "Name"> Name:</string>
    <string name="category">category</string>
    <string name ="AddMatch">AddMatch</string>
    <string name ="AddDayOff">AddDayOff</string>
    <string name="TrainingSettings">TrainingSettings</string>
    <string name="DDMMYYYY">DD-MM-YYYY></string>
    <string name="vsOpponent">vsOpponent</string>
    <string-array name="match_dif">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="settings1">setting1</string>
    <string name="setting2">setting2</string>
    <string name="setting3">setting3</string>
    <string name="member_username">Member Username:</string>
    <string name="insert_username">Insert username</string>
    <string name="select_role">Select Role</string>
    <string-array name="role">
        <item>Staff</item>
        <item>Player</item>
    </string-array>
    <string name="add_member">Add Member</string>
    <string name="_30_days_free_trial_limited_features">30 Days Free Trial - Limited Features</string>
    <string name="buy_license1">Buy License</string>
    <string name="_1_month_full_membership_features">1 Month Full Membership - Features</string>
    <string name="buy_license2">Buy License</string>
    <string name="_3_months_full_membership_features">3 Months Full Membership - Features</string>
    <string name="buy_license3">Buy License</string>
    <string name="_1_year_full_membership_features">1 Year Full Membership - Features</string>
    <string name="buy_license4">Buy License</string>
    <string name="get_help_for_features">Get Help For Features</string>
    <string name="user_personal_settings">User Personal_Settings</string>
    <string name="add_player_s_performance">Add Player\'s Performance</string>
    <string name="export_match_statistics">Export Match Statistics</string>
    <string name="value">Value</string>
    <string name="add_player_s_match_performance">Add Player\'s Match Performance</string>
    <string name="select_date">Select Date</string>
    <string name="show_charts">Show Charts</string>
    <string name="export">Export</string>
    <string name="ft_attempted">ft_attempted</string>
    <string name="_3pts_att">3pts_att</string>
    <string name="ft_made">ft_made</string>
    <string name="_2pts_att">2pts_att</string>
    <string name="_3pts_made">3pts_made</string>
    <string name="_2pts_made">2pts_made</string>
    <string name="ft_per">ft_per</string>
    <string name="_2pts_per">2pts_per</string>
    <string name="_3pts_per">3pts_per</string>
    <string name="reb_off">reb-off</string>
    <string name="reb_def">reb-def</string>
    <string name="steals">steals</string>
    <string name="assists">assists</string>
    <string name="to">to</string>
    <string name="foul">foul</string>
    <string name="blocks">blocks</string>
    <string name="min">min</string>
    <string name="date_from">Date_from</string>
    <string name="date_to">Date To</string>
    <string name="add_player_performance">Add Player Performance</string>
    <string name="export_training_statistics">Export Training Statistics</string>
    <string name="app_name">btm3</string>
    <string name="height">Height</string>
    <string name="save_standard">Save Standard</string>
    <string name="_2pts">2PTS %</string>
    <string name="turnovers">Turnovers</string>
    <string name="age">Age</string>
    <string name="ft">FT %</string>
    <string name="_3pts">3PTS %</string>
    <string name="def_rebounds">Def Rebounds</string>
    <string name="personal_foul">Personal Foul</string>
    <string name="off_rebounbs">Off Rebounbs</string>
    <string name="height_m">Height(m)</string>
    <string name="player_name">Player Name</string>
    <string name="add_player">Add Player</string>
    <string name="born_on">Born on</string>
    <string name="save_video">Save Video</string>
    <string name="training_exercise_name">Training Exercise Name</string>
    <string name="add">Add</string>
    <string name="ImportVideo">Import</string>
    <string name="click_import_to_import_video">Click Import to Import Video</string>
    <string-array name="injury">
        <item>Is Injured?</item>
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="position">
        <item>PG</item>
        <item>SG</item>
        <item>SF</item>
        <item>PF</item>
        <item>C</item>
    </string-array>
    <string-array name="players">
        <item>Select Player</item>
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Player 3</item>
    </string-array>
    <string-array name="export_players">
        <item>Select Player for Export</item>
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Player 3</item>
    </string-array>
    <string name="Import">Import</string>
</resources>

