<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/selectplayer1"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/AddPlayerMatchPerformance"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginBottom="281dp"
        android:onClick="AddPlayerMatchPerformance"
        android:text="@string/add_player_s_match_performance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/selectmatch"
        android:layout_width="194dp"
        android:layout_height="34dp"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ExportMatchStatistics"
        android:layout_width="142dp"
        android:layout_height="67dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="8dp"
        android:onClick="ExportMatchStatistics"
        android:text="@string/export_match_statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="386dp"
        android:layout_height="226dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="92dp">

            <EditText
                android:id="@+id/ft_attempted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/ft_attempted"
                android:inputType=""
                android:singleLine="true"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="111dp"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="137dp"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/ft_made"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/ft_made"
                android:inputType=""
                android:singleLine="true"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="96dp"
                tools:layout_editor_absoluteX="137dp"
                tools:layout_editor_absoluteY="137dp"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/threepts_att"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/_3pts_att"
                android:inputType=""
                android:singleLine="true"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="73dp"
                tools:layout_editor_absoluteX="232dp"
                tools:layout_editor_absoluteY="137dp"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/twopts_att"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/_2pts_att"
                android:inputType=""
                android:singleLine="true"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="306dp"
                tools:layout_editor_absoluteY="137dp"
                tools:targetApi="o"></EditText>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="92dp">

            <EditText
                android:id="@+id/threepts_made"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/_3pts_made"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/twopts_made"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/_2pts_made"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/ft_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/ft_per"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/twopts_per"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/_2pts_per"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>
        </TableRow>

        <TableRow
            android:layout_width="318dp"
            android:layout_height="18dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="92dp">

            <EditText
                android:id="@+id/threepts_per"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/_3pts_per"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/reb-off"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/reb_off"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/reb-def"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/reb_def"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/steals"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/steals"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>
        </TableRow>

        <TableRow
            android:layout_width="318dp"
            android:layout_height="18dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="92dp">

            <EditText
                android:id="@+id/assists"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/assists"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/to"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/blocks"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/blocks"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>

            <EditText
                android:id="@+id/foul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/foul"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>
        </TableRow>

        <TableRow
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="92dp">

            <EditText
                android:id="@+id/min"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/min"
                android:inputType=""
                android:singleLine="true"
                tools:targetApi="o"></EditText>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>